[package]
name = "libp2p-lookup"
version = "0.6.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2021"
license = "MIT"
description = "Lookup a peer by its id."
repository = "https://github.com/mxinden/libp2p-lookup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50.0", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "relay", "quic", "rsa", "macros"] }
structopt = "0.3.26"
futures = "0.3.25"
env_logger = "0.9.3"
async-std = { version = "1.12.0", features = ["attributes"] }
ansi_term = "0.12.1"
log = "0.4"
thiserror = "1"